--- a/index.html
+++ b/index.html
@@ -3,10 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <a href="#">Download Excursion (coming soon!)</a>
+    <div class="upper">
+      <h1>Discover hidden places in the world around you</h1>
+      <p><a href="#">Download Excursion (coming soon!)</a></p>
+      <video autoplay muted loop src="resources/videos/excursion.mp4" type="mp4"></video>
+    </div>
+
+    <div class="middle">
+      <h1>Your personal travel guide</h1>
+      <p>Excursion remembers places you like and recommends new points of interest around you</p>
+      <img src="resources/images/camp.jpg" alt="Tents on a camping site"/>
+    </div>
+
+    <div class="lower">
+      <img src="resources/images/phone.png" alt="cellphone"/>
+      <h1>Coming Soon for iPhone and Android</h1>
+      <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    </div>
+
+    <div class="footer">
+      <p>&copy Excursion</p>
+    </div>
+
+
   </body>
 </html>
