--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="middle">
       <h2>Your personal travel guide</h2>
       <p>Excursion remembers places you like and recommends new points of interest around you</p>
-      <img src="resources/images/camp.jpg" alt="Tents on a camping site"/>
+      <p><img src="resources/images/camp.jpg" alt="Tents on a camping site"/></p>
     </div>
 
     <div class="lower">
-      <img src="resources/images/phone.png" alt="cellphone"/>
+      <p><img src="resources/images/phone.png" alt="cellphone"/></p>
       <h2>Coming Soon for iPhone and Android</h2>
       <p><a href="#">Download Excursion (Coming soon!)</a></p>
     </div>
